Use topics to inform users of deprecated exemplars/methods